--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+<!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" href="style.css">
+	</head>
 	<body>
-		<img src="Belle.png" alt="">
-		<h1>Coming soon... Le Wagon</h1>
+		<div id="container">
+			<img id = "logo" src="Belle.png" alt="">
+			<h1>Coming soon... Le Wagon</h1>
+		</div>
 	</body>
